--- a/src/main.css
+++ b/src/main.css
@@ -270,7 +270,7 @@
 
         width: 100%;
         max-width: calc(100% - 2rem);
-        max-height: 35vh;
+        max-height: 30vh;
         object-fit: contain;
 
         /* border-radius: 2px;
@@ -317,6 +317,10 @@
 
         @media screen and (width <= 960px) {
             --main-gap: 1rem;
+        }
+
+        @media screen and (width <= 1200px) {
+            grid-template-columns: 1fr minmax(auto, 70ch) 1fr;
         }
 
         &:has(.content.wide) {
@@ -428,7 +432,7 @@
 
             > .content {
                 grid-column: 2 / 3;
-                padding: 1.15rem 0 13rem;
+                padding: 1.15rem 0 12rem;
                 min-width: 0;
 
                 &.wide {
@@ -438,7 +442,7 @@
                 @media screen and (width <= 600px) {
                     &,
                     &.wide {
-                        padding: 1rem 1rem 13rem;
+                        padding: 1rem 1rem 12rem;
                     }
                 }
             }
@@ -589,7 +593,8 @@
             padding: 0.5rem;
 
             display: grid;
-            grid-template-rows: auto 1fr auto;
+            grid-template-rows: auto 1fr;
+            grid-auto-flow: row;
             gap: 0.5rem;
 
             font-size: 13pt;
